Significant work on UI. Groups and notes are now displayed appropriately. Flinging rows exposes buttons (currently unhandled) for modifying the relevant object. This is currently not as responsive as intended, and will likely change in a future commit.

--- a/Snys/res/values/strings.xml
+++ b/Snys/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">Snys</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_logout">Log out</string>
+    <string name="title_activity_group">GroupActivity</string>
+    <string name="action_settings">Settings</string>
 
 </resources>
