--- a/Snys/res/values/strings.xml
+++ b/Snys/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_logout">Log out</string>
     <string name="title_activity_group">GroupActivity</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_note">NoteActivity</string>
 
 </resources>
